// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Self referencing type 1`] = `"Type invalid because m1 is recursive"`;

exports[`dependency multi file 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
        "schema": Object {
          "data": Object {
            "d": Object {
              "data": null,
              "kind": "double",
            },
          },
          "kind": "Object",
        },
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 10,
                "endLineNumber": 3,
                "startColNumber": 15,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
        "schema": Object {
          "data": Object {
            "m": Object {
              "data": Object {
                "d": Object {
                  "data": null,
                  "kind": "double",
                },
              },
              "kind": "Object",
            },
          },
          "kind": "Object",
        },
      },
    },
    "size": 2,
  },
  "schemaFactory": [Function],
}
`;

exports[`function with invalid return type 1`] = `"SomeType does not refer to any known type"`;

exports[`function with unknown types 1`] = `"Unable to find end of entity for UnaryParameter at , b: Foreign.Type) {"`;

exports[`simple echo function 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "Shout" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 18,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 18,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "Shout",
        "schema": Object {
          "data": Object {
            "m": Object {
              "data": null,
              "kind": "string",
            },
          },
          "kind": "Object",
        },
      },
      "echo" => Object {
        "body": Array [
          Object {
            "differentiate": [Function],
            "kind": "Statement",
          },
        ],
        "kind": "Function",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 6,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "method": "POST",
        "name": "echo",
        "parameter": Object {
          "kind": "WithParam",
          "name": "s",
          "schema": Object {
            "data": Object {
              "m": Object {
                "data": null,
                "kind": "string",
              },
            },
            "kind": "Object",
          },
        },
        "part": Object {
          "FunctionBody": Object {
            "children": Object {
              "Statement": Array [
                Object {
                  "differentiate": [Function],
                  "kind": "Statement",
                },
              ],
            },
            "kind": "FunctionBody",
            "loc": Object {
              "endColNumber": 35,
              "endLineNumber": 6,
              "startColNumber": 33,
              "startLineNumber": 6,
            },
          },
          "Parameter": Object {
            "differentiate": [Function],
            "kind": "Parameter",
          },
          "ReturnTypeSpec": Object {
            "differentiate": [Function],
            "kind": "ReturnTypeSpec",
          },
        },
        "returnType": Object {
          "data": Object {
            "m": Object {
              "data": null,
              "kind": "string",
            },
          },
          "kind": "Object",
        },
      },
    },
    "size": 2,
  },
  "schemaFactory": [Function],
}
`;

exports[`simple multi file 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
        "schema": Object {
          "data": Object {
            "d": Object {
              "data": null,
              "kind": "double",
            },
          },
          "kind": "Object",
        },
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 15,
                "startLineNumber": 2,
              },
              "name": "d",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
        "schema": Object {
          "data": Object {
            "d": Object {
              "data": null,
              "kind": "double",
            },
          },
          "kind": "Object",
        },
      },
      "m3" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 6,
                "startColNumber": 15,
                "startLineNumber": 5,
              },
              "name": "m",
              "part": Object {
                "CompleteType": Object {
                  "differentiate": [Function],
                  "kind": "CompleteType",
                },
              },
            },
          ],
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 5,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "m3",
        "schema": Object {
          "data": Object {
            "m": Object {
              "data": Object {
                "d": Object {
                  "data": null,
                  "kind": "double",
                },
              },
              "kind": "Object",
            },
          },
          "kind": "Object",
        },
      },
    },
    "size": 3,
  },
  "schemaFactory": [Function],
}
`;
